Use Java 11 methods where possible (#6700)