@@ -17,7 +17,7 @@ import hudson.model.User;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import jenkins.model.Jenkins;
@@ -84,7 +84,7 @@ public class TokenBasedRememberMeServices2Test {
         @Override
         protected UserDetails authenticate2(String username, String password) throws AuthenticationException {
             if (username.equals(password)) {
-                return new org.springframework.security.core.userdetails.User(username, password, Collections.singleton(new SimpleGrantedAuthority("myteam")));
+                return new org.springframework.security.core.userdetails.User(username, password, Set.of(new SimpleGrantedAuthority("myteam")));
             }
             throw new BadCredentialsException(username);
         }
